<resources>
    <string name="app_name">NCast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_for_now"><u><font color="#FF000000">Skip for now</font></u></string>
    <string name="Continue">Continue</string>
    <string name="get_new_music_and_create_your_perfect_playlist">Get new music and create your perfect playlist</string>
    <string name="stream_songs_in_just_a_few_clicks">Stream songs \n in just a few clicks</string>
    <string name="enjoy_relaxing_moments_with_ncast">Enjoy relaxing \n moments with Ncast</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account_and_feel_the_benefits">Create your account and feel the benefits</string>
    <string name="email"><b><font color="#FF000000">Email</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="username"><b><font color="#FF000000">Username</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="password"><b><font color="#FF000000">Password</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="cfPassword"><b><font color="#FF000000">Confirm Password</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="immerse_yourself_in_your_own_space">Immerse yourself in your own space</string>
    <string name="sign_in">Sign In</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="about">About</string>
    <string name="cur_password"><b><font color="#FF000000">Current Password</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="new_password"><b><font color="#FF000000">New Password</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="cf_new_password"><b><font color="#FF000000">Confirm New Password</font></b><b><font color="#F40303"> *</font></b></string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="save">Save</string>
    <string name="welcome_back_home">Welcome back,</string>
    <string name="view_all"><![CDATA[View All >>]]></string>
    <string name="recently_played_songs">Recently played songs</string>
    <string name="search">Search</string>
    <string name="most_searched_songs">Most Searched Songs</string>
    <string name="updated_every_hour">Updated every hour</string>
    <string name="discoveries">Discoveries</string>
    <string name="your_library">Your Library</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="your_liked_songs">Your Liked Songs</string>
    <string name="your_playlists">Your playlists</string>
    <string name="forgot_password"><u>Forgot your password</u></string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="new_album_release">New Album Release</string>
    <string name="featured_playlist">Featured Playlist</string>
    <string name="lyric_test">Thức giấc mỗi ngày là khi màn đêm vừa kéo về
        \nTiếng chuông ngân dài, nhưng vẫn không thấy một ai
        \nBờ vai nhữ rã rời, con tim em muốn dừng lại thôi
        \nKết thúc câu chuyện cũng là lúc không ai bước tiếp
        \nEm giờ đã có bầu trời mới, mọi chuyện sẽ qua thôi
        \nAnh thì tìm kiếm tình yêu dù đánh mất lâu rồi
        \nChạy thật nhanh, đi thật xa để cố quên những gì xảy ra
        \nNhưng trước mắt anh vẫn toàn thấy ký ức về em
        \nEm giờ đã có bầu trời mới, thế giới cũng đổi thay
        \nGiữa muôn vàn vì sao chiếu sáng nơi đây chỉ có mỗi anh lạc lõng
        \nĐoạn đường mới đừng tìm lại giấc mơ em đã cất sâu
        \nCó khi ngày mai ta sẽ vô tình gặp nhau, đứng thật lâu
        \nCứ mỗi sớm ban mai là giấc mơ xưa lại đến
        \nVẫn cứ ngỡ bên tai là những thanh âm ngọt ngào
        \nGió cuốn những đám mây về một nơi xa</string>
    <string name="loading">Loading...</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="collection_of_newly_released_albums_updated_hourly">Collection of newly released albums, updated hourly.</string>
    <string name="collection_of_featured_playlists_updated_hourly">Collection of featured playlists, updated hourly.</string>
    <string name="results_list">Results list</string>
</resources>