<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.signUp.email.EmailSignUpFragment">

    <View
        android:id="@+id/name_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/name_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="25sp"
        android:autoSizeTextType="uniform"
        android:gravity="center|bottom"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/name_app"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.03"
        android:text="@string/create_your_account_and_feel_the_benefits"
        android:textColor="@color/grey"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.05"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintVertical_bias="0.05"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintVertical_bias="0"
        app:helperTextTextColor="@color/red"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="@string/abc_gmail_com"
            android:textColorHint="@color/input_color"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingStart="45sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:background="@drawable/button"
        app:layout_constraintHeight_percent="0.06"
        android:text="@string/Continue"
        android:textAllCaps="false"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintVertical_bias="0.8"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>