<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    tools:context=".ui.signIn.UserSignInFragment">

    <View
        android:id="@+id/name_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/icon_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="25sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center|bottom"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/name_app"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="12sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/immerse_yourself_in_your_own_space"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/email"
        android:textColor="@color/white_blur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:helperTextTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintVertical_bias="0"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="@string/abc_gmail_com"
            android:inputType="textEmailAddress"
            android:paddingStart="45sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textColorHint="@color/input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white_blur"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:helperTextTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/text4"
        app:layout_constraintVertical_bias="0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:startIconDrawable="@drawable/ic_pass"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:paddingStart="45sp"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:textColorHint="@color/input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/white_blur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/text_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="13sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center|end"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toBottomOf="@id/sign_in"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="13sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center|start"
        android:text="@string/sign_up"
        android:paddingStart="10dp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/sign_in"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>